deploy: 8d7e13fb149ab0f4cfad9bcd43b6d60bed84e186

--- a/src/AdminComplaintDetails.html
+++ b/src/AdminComplaintDetails.html
@@ -7,10 +7,10 @@
     <title>Complaint Details — ComplaNet Admin</title>
     <!-- Font Awesome -->
 
-  <script type="module" crossorigin src="../assets/adminComplaintDetails-CdawBGDd.js"></script>
+  <script type="module" crossorigin src="../assets/adminComplaintDetails-Dd-Yk2OU.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style--SQkpGwP.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
 </head>
 
 <body
