--- a/src/Login.html
+++ b/src/Login.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Login</title>
-  <script type="module" crossorigin src="../assets/login-DBxsXzS5.js"></script>
+  <script type="module" crossorigin src="../assets/login-CBNSGIUp.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="stylesheet" crossorigin href="../assets/style--SQkpGwP.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
 </head>
 
 <body
@@ -81,13 +81,7 @@
         <a href="ResetPassword.html" class="hover:text-eco-dark transition">Forgot Password?</a>
       </div>
 
-      <!-- Dark Mode Toggle -->
-      <div class="mt-8 flex justify-center">
-        <button id="darkModeToggle"
-          class="px-4 py-2 rounded bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 font-semibold hover:bg-gray-300 dark:hover:bg-gray-600 transition">
-          Toggle Dark Mode
-        </button>
-      </div>
+
     </div>
   </main>
 
