--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Admin Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminDashboard-DspQBQxs.js"></script>
+  <script type="module" crossorigin src="../assets/adminDashboard-B9l29B7V.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style--SQkpGwP.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
 </head>
 
 <body
