--- a/src/Notifications.html
+++ b/src/Notifications.html
@@ -8,7 +8,7 @@
   <script type="module" crossorigin src="../assets/supabaseClient-Du47UBJl.js"></script>
   <script type="module" crossorigin src="../assets/darkMode-DMjetaZp.js"></script>
   <script type="module" crossorigin src="../assets/notifications-BpmTXMVq.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/style--SQkpGwP.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
 </head>
 
 <body
