--- a/src/UserDashboard.html
+++ b/src/UserDashboard.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/userDashboard-Doq9aIKO.js"></script>
+  <script type="module" crossorigin src="../assets/userDashboard-DTzIwhY1.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
   <link rel="modulepreload" crossorigin href="../assets/notifications-BpmTXMVq.js">
-  <link rel="stylesheet" crossorigin href="../assets/style--SQkpGwP.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
 </head>
 
 <body
