--- a/src/AdminComplaintDetails.html
+++ b/src/AdminComplaintDetails.html
@@ -7,7 +7,7 @@
     <title>Complaint Details — ComplaNet Admin</title>
     <!-- Font Awesome -->
 
-  <script type="module" crossorigin src="../assets/adminComplaintDetails-Dd-Yk2OU.js"></script>
+  <script type="module" crossorigin src="../assets/adminComplaintDetails-CpIluzp9.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
   <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
@@ -180,6 +180,8 @@
                     <div class="mt-6 pt-4 border-t dark:border-gray-700">
                         <p class="text-xs text-gray-400 mb-2">Assigned To:</p>
                         <div class="flex items-center space-x-2">
+                            <img id="adminProfileImage" src="" alt="Admin Profile"
+                                class="w-8 h-8 rounded-full object-cover hidden">
                             <div class="w-8 h-8 rounded-full bg-indigo-100 flex items-center justify-center text-indigo-600 font-bold text-xs"
                                 id="adminInitials">
                                 A
