feat: Add professional email notifications with EmailJS

--- a/src/AllComplaints.html
+++ b/src/AllComplaints.html
@@ -449,6 +449,15 @@
         </div>
     </div>
 
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            // Initialize EmailJS with Public Key
+            emailjs.init('08jWWtOPNjZJ4BcQw');
+        })();
+    </script>
+
     <script type="module" src="./darkMode.js"></script>
     <script type="module" src="./all-complaints.js"></script>
 </body>
