deploy: ae6d4dbc9160d12ea4651877ea48425636b92d8d

--- a/src/AllComplaints.html
+++ b/src/AllComplaints.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Complaints — ComplaNet Admin</title>
-  <script type="module" crossorigin src="../assets/allComplaints-DnpWOmM2.js"></script>
+  <script type="module" crossorigin src="../assets/allComplaints-Ech8c9uk.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
   <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
@@ -451,6 +451,15 @@
             </div>
         </div>
     </div>
+
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            // Initialize EmailJS with Public Key
+            emailjs.init('08jWWtOPNjZJ4BcQw');
+        })();
+    </script>
 
 </body>
 
