Fix admin profile headers, add notepad, standardize UI

--- a/src/Analytics.html
+++ b/src/Analytics.html
@@ -30,6 +30,13 @@
                 <button id="profileButton" class="flex items-center space-x-2 focus:outline-none">
                     <i class="fas fa-user-shield text-gray-500 text-2xl"></i>
                 </button>
+                <div id="profileMenu"
+                    class="absolute right-0 mt-2 w-48 bg-white dark:bg-gray-800 rounded-lg shadow-lg py-2 hidden z-50">
+                    <a href="AdminProfile.html"
+                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700">Profile</a>
+                    <button id="headerLogoutBtn" class="w-full text-left px-4 py-2 hover:bg-red-50 text-red-500">Log
+                        Out</button>
+                </div>
             </div>
         </nav>
 
