--- a/src/Profile.html
+++ b/src/Profile.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — User Profile</title>
 
-  <script type="module" crossorigin src="../assets/profile-CP8XfepC.js"></script>
+  <script type="module" crossorigin src="../assets/profile-B3smARvM.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
 </head>
 
 <body
