--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Admin Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminDashboard-B9l29B7V.js"></script>
+  <script type="module" crossorigin src="../assets/adminDashboard-C99Oq3S4.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
 </head>
 
 <body
@@ -155,81 +155,111 @@
             </div>
         </div>
 
-        <!-- Recent Activity Section -->
-        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 mb-10">
-            <div class="flex justify-between items-center mb-6">
-                <h2 class="text-xl font-bold text-gray-800 dark:text-gray-200">Recent Activity</h2>
-                <a href="AllComplaints.html" class="text-eco hover:text-eco-dark text-sm font-semibold">View All</a>
-            </div>
-            <div class="overflow-x-auto hidden md:block">
-                <table class="min-w-full bg-white dark:bg-gray-800">
-                    <thead
-                        class="text-gray-500 dark:text-gray-400 uppercase text-xs leading-normal border-b dark:border-gray-700">
-                        <tr>
-                            <th class="py-3 px-6 text-left">Title</th>
-                            <th class="py-3 px-6 text-left">Category</th>
-                            <th class="py-3 px-6 text-left">Date</th>
-                            <th class="py-3 px-6 text-center">Status</th>
-                            <th class="py-3 px-6 text-center">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="recentActivityTable" class="text-gray-600 dark:text-gray-300 text-sm font-light">
-                        <!-- Loading State -->
-                        <tr>
-                            <td colspan="5" class="py-6 text-center">Loading recent activity...</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <!-- Main Content Area: Activity + Notepad -->
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-10">
 
-            <div id="recentActivityCards" class="grid grid-cols-1 gap-4 md:hidden">
-                <p class="text-center text-gray-500 py-4">Loading recent activity...</p>
-            </div>
-
-            <!-- Template for Recent Activity Card -->
-            <template id="activityCardTemplate">
-                <div
-                    class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow border border-gray-100 dark:border-gray-700 flex flex-col space-y-3">
-                    <div class="flex justify-between items-start">
-                        <h3 class="card-title font-bold text-gray-800 dark:text-gray-200 text-sm line-clamp-2"></h3>
-                        <span
-                            class="card-status py-1 px-2 rounded text-[10px] font-bold uppercase tracking-wide whitespace-nowrap ml-2"></span>
-                    </div>
-
-                    <div class="flex items-center justify-between text-xs text-gray-500 dark:text-gray-400">
-                        <span class="card-category bg-gray-100 dark:bg-gray-700 px-2 py-1 rounded"></span>
-                        <span class="card-date"></span>
-                    </div>
-
-                    <div class="pt-2 border-t dark:border-gray-700 text-right">
-                        <a href="#"
-                            class="card-link text-blue-500 hover:text-blue-600 text-xs font-semibold uppercase tracking-wide">
-                            View Details →
-                        </a>
-                    </div>
+            <!-- Recent Activity Section (Takes up 2 columns) -->
+            <div class="lg:col-span-2 bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6">
+                <div class="flex justify-between items-center mb-6">
+                    <h2 class="text-xl font-bold text-gray-800 dark:text-gray-200">Recent Activity</h2>
+                    <a href="AllComplaints.html" class="text-eco hover:text-eco-dark text-sm font-semibold">View All</a>
                 </div>
-            </template>
+                <div class="overflow-x-auto hidden md:block">
+                    <table class="min-w-full bg-white dark:bg-gray-800">
+                        <thead
+                            class="text-gray-500 dark:text-gray-400 uppercase text-xs leading-normal border-b dark:border-gray-700">
+                            <tr>
+                                <th class="py-3 px-6 text-left">Title</th>
+                                <th class="py-3 px-6 text-left">Category</th>
+                                <th class="py-3 px-6 text-left">Date</th>
+                                <th class="py-3 px-6 text-center">Status</th>
+                                <th class="py-3 px-6 text-center">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="recentActivityTable" class="text-gray-600 dark:text-gray-300 text-sm font-light">
+                            <!-- Loading State -->
+                            <tr>
+                                <td colspan="5" class="py-6 text-center">Loading recent activity...</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
 
-            <!-- Template for Recent Activity Table Row -->
-            <template id="recentActivityRowTemplate">
-                <tr
-                    class="border-b border-gray-200 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-700 transition">
-                    <td class="col-title py-3 px-6 text-left font-medium text-gray-800 dark:text-gray-200"></td>
-                    <td class="py-3 px-6 text-left">
-                        <span
-                            class="col-category bg-gray-200 dark:bg-gray-600 text-gray-700 dark:text-gray-200 py-1 px-3 rounded-full text-xs"></span>
-                    </td>
-                    <td class="col-date py-3 px-6 text-left"></td>
-                    <td class="py-3 px-6 text-center">
-                        <span class="col-status py-1 px-3 rounded-full text-xs font-semibold"></span>
-                    </td>
-                    <td class="py-3 px-6 text-center">
-                        <a href="#"
-                            class="col-link text-blue-500 hover:text-blue-700 hover:underline text-xs font-medium">View
-                            Details</a>
-                    </td>
-                </tr>
-            </template>
+                <div id="recentActivityCards" class="grid grid-cols-1 gap-4 md:hidden">
+                    <p class="text-center text-gray-500 py-4">Loading recent activity...</p>
+                </div>
+
+                <!-- Template for Recent Activity Card -->
+                <template id="activityCardTemplate">
+                    <div
+                        class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow border border-gray-100 dark:border-gray-700 flex flex-col space-y-3">
+                        <div class="flex justify-between items-start">
+                            <h3 class="card-title font-bold text-gray-800 dark:text-gray-200 text-sm line-clamp-2"></h3>
+                            <span
+                                class="card-status py-1 px-2 rounded text-[10px] font-bold uppercase tracking-wide whitespace-nowrap ml-2"></span>
+                        </div>
+                        <div class="flex items-center justify-between text-xs text-gray-500 dark:text-gray-400">
+                            <span class="card-category bg-gray-100 dark:bg-gray-700 px-2 py-1 rounded"></span>
+                            <span class="card-date"></span>
+                        </div>
+                        <div class="pt-2 border-t dark:border-gray-700 text-right">
+                            <a href="#"
+                                class="card-link text-blue-500 hover:text-blue-600 text-xs font-semibold uppercase tracking-wide">
+                                View Details →
+                            </a>
+                        </div>
+                    </div>
+                </template>
+
+                <!-- Template for Recent Activity Table Row -->
+                <template id="recentActivityRowTemplate">
+                    <tr
+                        class="border-b border-gray-200 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-700 transition">
+                        <td class="col-title py-3 px-6 text-left font-medium text-gray-800 dark:text-gray-200"></td>
+                        <td class="py-3 px-6 text-left">
+                            <span
+                                class="col-category bg-gray-200 dark:bg-gray-600 text-gray-700 dark:text-gray-200 py-1 px-3 rounded-full text-xs"></span>
+                        </td>
+                        <td class="col-date py-3 px-6 text-left"></td>
+                        <td class="py-3 px-6 text-center">
+                            <span class="col-status py-1 px-3 rounded-full text-xs font-semibold"></span>
+                        </td>
+                        <td class="py-3 px-6 text-center">
+                            <a href="#"
+                                class="col-link text-blue-500 hover:text-blue-700 hover:underline text-xs font-medium">View
+                                Details</a>
+                        </td>
+                    </tr>
+                </template>
+            </div>
+
+            <!-- Personal Notepad Widget (Takes up 1 column) -->
+            <div
+                class="bg-yellow-50 dark:bg-gray-700 rounded-xl shadow-lg p-6 flex flex-col h-full border-t-4 border-yellow-400 relative overflow-hidden group">
+                <!-- Background decoration -->
+                <i
+                    class="fas fa-sticky-note absolute -bottom-4 -right-4 text-8xl text-yellow-500 opacity-10 dark:opacity-20 transform rotate-12 group-hover:rotate-0 transition-transform duration-500"></i>
+
+                <div class="flex justify-between items-center mb-4 relative z-10">
+                    <h2 class="text-xl font-bold text-gray-800 dark:text-yellow-50 flex items-center gap-2">
+                        <i class="fas fa-pen-fancy text-yellow-600 dark:text-yellow-400"></i>
+                        My Scratchpad
+                    </h2>
+                    <span
+                        class="text-xs font-medium text-gray-500 dark:text-gray-300 bg-white dark:bg-gray-600 px-2 py-1 rounded shadow-sm"
+                        id="saveStatus">Auto-saved</span>
+                </div>
+
+                <div class="flex-grow relative z-10">
+                    <textarea id="adminNotepad"
+                        class="w-full h-full min-h-[300px] lg:min-h-0 bg-transparent border-none resize-none focus:ring-0 text-gray-700 dark:text-gray-200 text-sm leading-relaxed placeholder-gray-400 dark:placeholder-gray-500 font-medium"
+                        placeholder="Write your quick reminders here...&#10;- Call Maintenance Team&#10;- Check Ticket #42&#10;- Review Weekly Report"></textarea>
+                </div>
+                <p class="text-[10px] text-gray-400 dark:text-gray-500 mt-2 text-center">
+                    Stored locally on your device
+                </p>
+            </div>
+
         </div>
     </main>
 
