--- a/src/ResetPassword.html
+++ b/src/ResetPassword.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Reset Password</title>
-  <script type="module" crossorigin src="../assets/resetPassword-BMEboDwt.js"></script>
+  <script type="module" crossorigin src="../assets/resetPassword-3SrUYzi9.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
 </head>
 
 <body
