--- a/src/TechnicalForm.html
+++ b/src/TechnicalForm.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/technicalForm-BT-4Zn5g.js"></script>
+  <script type="module" crossorigin src="../assets/technicalForm-DvYoqUN4.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-C6lciQLW.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
 </head>
 
 <body
