--- a/src/AdminProfile.html
+++ b/src/AdminProfile.html
@@ -69,7 +69,7 @@
     <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 hidden z-40"></div>
 
     <!-- Main Content -->
-    <main class="flex-1 px-4 py-6 md:px-10">
+    <main id="mainContent" class="flex-1 px-4 py-6 md:px-10 hidden">
         <div class="mb-8 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4 sm:gap-0">
             <div>
                 <h1 class="text-2xl md:text-3xl font-bold mb-2">Admin Profile</h1>
