--- a/src/ChangePassword.html
+++ b/src/ChangePassword.html
@@ -12,7 +12,7 @@
   class="flex flex-col min-h-screen bg-[var(--color-bg-light)] text-[var(--color-text-light)] dark:bg-[var(--color-bg-dark)] dark:text-[var(--color-text-dark)] transition-all duration-300 font-sans">
 
   <!-- Main Section -->
-  <main class="flex flex-1 items-center justify-center px-6 py-12">
+  <main id="mainContent" class="flex flex-1 items-center justify-center px-6 py-12 hidden">
     <div class="w-full max-w-md bg-white dark:bg-gray-800 rounded-2xl shadow-lg p-8 animate-fade-in">
 
       <!-- Logo -->
