--- a/src/AdminProfile.html
+++ b/src/AdminProfile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Profile — ComplaNet</title>
-  <script type="module" crossorigin src="../assets/adminProfile-BtDbP7Kt.js"></script>
+  <script type="module" crossorigin src="../assets/adminProfile-AOiXDEII.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
   <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
@@ -72,7 +72,7 @@
     <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 hidden z-40"></div>
 
     <!-- Main Content -->
-    <main class="flex-1 px-4 py-6 md:px-10">
+    <main id="mainContent" class="flex-1 px-4 py-6 md:px-10 hidden">
         <div class="mb-8 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4 sm:gap-0">
             <div>
                 <h1 class="text-2xl md:text-3xl font-bold mb-2">Admin Profile</h1>
