--- a/src/ChangePassword.html
+++ b/src/ChangePassword.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Set New Password</title>
-  <script type="module" crossorigin src="../assets/changePassword-DP9j8kXb.js"></script>
+  <script type="module" crossorigin src="../assets/changePassword-DihIR0HN.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
 </head>
@@ -14,7 +14,7 @@
   class="flex flex-col min-h-screen bg-[var(--color-bg-light)] text-[var(--color-text-light)] dark:bg-[var(--color-bg-dark)] dark:text-[var(--color-text-dark)] transition-all duration-300 font-sans">
 
   <!-- Main Section -->
-  <main class="flex flex-1 items-center justify-center px-6 py-12">
+  <main id="mainContent" class="flex flex-1 items-center justify-center px-6 py-12 hidden">
     <div class="w-full max-w-md bg-white dark:bg-gray-800 rounded-2xl shadow-lg p-8 animate-fade-in">
 
       <!-- Logo -->
