--- a/src/Profile.html
+++ b/src/Profile.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — User Profile</title>
 
-  <script type="module" crossorigin src="../assets/profile-AJVvbL1B.js"></script>
+  <script type="module" crossorigin src="../assets/profile-CaZo3LBB.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
   <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
@@ -66,7 +66,7 @@
   </aside>
 
   <!-- Main Content -->
-  <main class="flex-1 px-6 py-10 md:px-12">
+  <main id="mainContent" class="flex-1 px-6 py-10 md:px-12 hidden">
     <h1 class="text-3xl font-bold mb-6 text-eco-dark dark:text-eco-light">User Profile</h1>
 
     <div class="flex flex-col lg:flex-row lg:space-x-8 gap-6">
@@ -75,7 +75,8 @@
       <section
         class="flex-none lg:w-1/3 bg-white dark:bg-gray-800 rounded-xl shadow-md p-6 flex flex-col items-center relative">
         <div class="relative">
-          <img id="profileImage" src="../images/profile.png" class="h-32 w-32 rounded-full border-4 border-eco shadow-lg">
+          <img id="profileImage" src="../images/profile.png"
+            class="h-32 w-32 rounded-full border-4 border-eco shadow-lg">
           <!-- No upload button for read-only profile picture -->
         </div>
 
