feat: add date filter, refine admin dashboard, and improve text contrast

--- a/src/AdminComplaintDetails.html
+++ b/src/AdminComplaintDetails.html
@@ -24,7 +24,7 @@
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html" class="nav-content hover:text-eco transition">Dashboard</a>
-            <a href="AllComplaints.html" class="font-semibold text-eco hover:text-eco-dark transition">All
+            <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All
                 Complaints</a>
             <a href="Analytics.html" class="nav-content hover:text-eco transition">Analytics</a>
 
@@ -58,7 +58,7 @@
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html" class="nav-content hover:text-eco">Dashboard</a>
-                <a href="AllComplaints.html" class="font-semibold text-eco hover:text-eco-dark">All Complaints</a>
+                <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All Complaints</a>
                 <a href="Analytics.html" class="nav-content hover:text-eco">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content hover:text-eco">Admin Profile</a>
             </nav>
