--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -21,7 +21,7 @@
 
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
-            <a href="AdminDashboard.html" class="font-semibold text-eco hover:text-eco-dark">Dashboard</a>
+            <a href="AdminDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
             <a href="AllComplaints.html" class="nav-content">All Complaints</a>
             <a href="Analytics.html" class="nav-content">Analytics</a>
 
@@ -54,7 +54,7 @@
                 <img src="../images/BGlessLogoDark.png" alt="Logo" class="h-10">
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
-                <a href="AdminDashboard.html" class="font-semibold text-eco hover:text-eco-dark">Dashboard</a>
+                <a href="AdminDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
                 <a href="AllComplaints.html" class="nav-content">All Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
@@ -138,8 +138,8 @@
             </div>
 
             <!-- Deleted Complaints -->
-            <div class="bg-red-500 text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-pointer"
-                onclick="navigateToComplaints('Deleted')">
+            <div
+                class="bg-red-500 text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-default">
                 <div class="flex items-center justify-between">
                     <div>
                         <p class="text-red-100 text-sm font-medium mb-1">Deleted</p>
