--- a/src/Analytics.html
+++ b/src/Analytics.html
@@ -23,7 +23,7 @@
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
             <a href="AllComplaints.html" class="nav-content">All Complaints</a>
-            <a href="Analytics.html" class="font-semibold text-eco hover:text-eco-dark">Analytics</a>
+            <a href="Analytics.html" class="font-semibold text-eco-dark hover:text-eco-dark">Analytics</a>
 
             <!-- Profile Menu -->
             <div class="relative">
@@ -56,7 +56,7 @@
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
                 <a href="AllComplaints.html" class="nav-content">All Complaints</a>
-                <a href="Analytics.html" class="font-semibold text-eco hover:text-eco-dark">Analytics</a>
+                <a href="Analytics.html" class="font-semibold text-eco-dark hover:text-eco-dark">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
             </nav>
         </div>
