--- a/src/AdminProfile.html
+++ b/src/AdminProfile.html
@@ -57,7 +57,7 @@
                 <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
                 <a href="AllComplaints.html" class="nav-content">All Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
-                <a href="AdminProfile.html" class="font-semibold text-eco hover:text-eco-dark">Admin Profile</a>
+                <a href="AdminProfile.html" class="font-semibold text-eco-dark hover:text-eco-dark">Admin Profile</a>
             </nav>
         </div>
         <div class="px-6 py-4 border-t dark:border-gray-700 flex flex-col space-y-2">
