deploy: 3b0db3bc13e9f3aa78238d3e265382462b3bbdab

--- a/src/AdminComplaintDetails.html
+++ b/src/AdminComplaintDetails.html
@@ -7,10 +7,10 @@
     <title>Complaint Details — ComplaNet Admin</title>
     <!-- Font Awesome -->
 
-  <script type="module" crossorigin src="../assets/adminComplaintDetails-nvniAZ2E.js"></script>
+  <script type="module" crossorigin src="../assets/adminComplaintDetails-Be3PteoR.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-DwLXEiw4.css">
 </head>
 
 <body
@@ -27,7 +27,7 @@
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html" class="nav-content hover:text-eco transition">Dashboard</a>
-            <a href="AllComplaints.html" class="font-semibold text-eco hover:text-eco-dark transition">All
+            <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All
                 Complaints</a>
             <a href="Analytics.html" class="nav-content hover:text-eco transition">Analytics</a>
 
@@ -61,7 +61,7 @@
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html" class="nav-content hover:text-eco">Dashboard</a>
-                <a href="AllComplaints.html" class="font-semibold text-eco hover:text-eco-dark">All Complaints</a>
+                <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All Complaints</a>
                 <a href="Analytics.html" class="nav-content hover:text-eco">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content hover:text-eco">Admin Profile</a>
             </nav>
