--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Admin Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminDashboard-Beyzaw8c.js"></script>
+  <script type="module" crossorigin src="../assets/adminDashboard-C36lZLx0.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-DwLXEiw4.css">
 </head>
 
 <body
@@ -24,7 +24,7 @@
 
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
-            <a href="AdminDashboard.html" class="font-semibold text-eco hover:text-eco-dark">Dashboard</a>
+            <a href="AdminDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
             <a href="AllComplaints.html" class="nav-content">All Complaints</a>
             <a href="Analytics.html" class="nav-content">Analytics</a>
 
@@ -57,7 +57,7 @@
                 <img src="../images/BGlessLogoDark.png" alt="Logo" class="h-10">
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
-                <a href="AdminDashboard.html" class="font-semibold text-eco hover:text-eco-dark">Dashboard</a>
+                <a href="AdminDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
                 <a href="AllComplaints.html" class="nav-content">All Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
@@ -141,8 +141,8 @@
             </div>
 
             <!-- Deleted Complaints -->
-            <div class="bg-red-500 text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-pointer"
-                onclick="navigateToComplaints('Deleted')">
+            <div
+                class="bg-red-500 text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-default">
                 <div class="flex items-center justify-between">
                     <div>
                         <p class="text-red-100 text-sm font-medium mb-1">Deleted</p>
