--- a/src/AdminProfile.html
+++ b/src/AdminProfile.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Profile — ComplaNet</title>
-  <script type="module" crossorigin src="../assets/adminProfile-AOiXDEII.js"></script>
+  <script type="module" crossorigin src="../assets/adminProfile-CYuGo3-5.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-DwLXEiw4.css">
 </head>
 
 <body
@@ -60,7 +60,7 @@
                 <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
                 <a href="AllComplaints.html" class="nav-content">All Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
-                <a href="AdminProfile.html" class="font-semibold text-eco hover:text-eco-dark">Admin Profile</a>
+                <a href="AdminProfile.html" class="font-semibold text-eco-dark hover:text-eco-dark">Admin Profile</a>
             </nav>
         </div>
         <div class="px-6 py-4 border-t dark:border-gray-700 flex flex-col space-y-2">
