--- a/src/Analytics.html
+++ b/src/Analytics.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analytics — ComplaNet Admin</title>
-  <script type="module" crossorigin src="../assets/analytics-PRCoLtlM.js"></script>
+  <script type="module" crossorigin src="../assets/analytics-BxkE7a9N.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-DwLXEiw4.css">
 </head>
 
 <body
@@ -26,7 +26,7 @@
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
             <a href="AllComplaints.html" class="nav-content">All Complaints</a>
-            <a href="Analytics.html" class="font-semibold text-eco hover:text-eco-dark">Analytics</a>
+            <a href="Analytics.html" class="font-semibold text-eco-dark hover:text-eco-dark">Analytics</a>
 
             <!-- Profile Menu -->
             <div class="relative">
@@ -59,7 +59,7 @@
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
                 <a href="AllComplaints.html" class="nav-content">All Complaints</a>
-                <a href="Analytics.html" class="font-semibold text-eco hover:text-eco-dark">Analytics</a>
+                <a href="Analytics.html" class="font-semibold text-eco-dark hover:text-eco-dark">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
             </nav>
         </div>
