--- a/src/Newcomplaint.html
+++ b/src/Newcomplaint.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-DwLXEiw4.css">
 </head>
 
 <body
