--- a/src/Notifications.html
+++ b/src/Notifications.html
@@ -8,7 +8,7 @@
   <script type="module" crossorigin src="../assets/supabaseClient-Du47UBJl.js"></script>
   <script type="module" crossorigin src="../assets/darkMode-DMjetaZp.js"></script>
   <script type="module" crossorigin src="../assets/notifications-DfU9UfdW.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-DwLXEiw4.css">
 </head>
 
 <body
