--- a/src/AllComplaints.html
+++ b/src/AllComplaints.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Complaints — ComplaNet Admin</title>
-  <script type="module" crossorigin src="../assets/allComplaints-D1xaCUjh.js"></script>
+  <script type="module" crossorigin src="../assets/allComplaints-ifHN9LyZ.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-DwLXEiw4.css">
 </head>
 
 <body
@@ -25,7 +25,7 @@
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
-            <a href="AllComplaints.html" class="font-semibold text-eco hover:text-eco-dark">All Complaints</a>
+            <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All Complaints</a>
             <a href="Analytics.html" class="nav-content">Analytics</a>
 
             <!-- Profile Menu -->
@@ -58,7 +58,7 @@
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
-                <a href="AllComplaints.html" class="font-semibold text-eco hover:text-eco-dark">All Complaints</a>
+                <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
             </nav>
@@ -77,7 +77,7 @@
             <div>
                 <h1 class="text-3xl font-bold mb-1">Manage Complaints</h1>
                 <p class="text-gray-600 dark:text-gray-300">
-                    Total Complaints: <span id="totalComplaintsCount" class="font-bold text-eco">0</span>
+                    Total Complaints: <span id="totalComplaintsCount" class="font-bold text-eco-dark">0</span>
                 </p>
             </div>
         </div>
@@ -95,7 +95,17 @@
             </div>
 
             <!-- Actions -->
-            <div class="flex flex-col sm:flex-row gap-3">
+            <div class="flex flex-col xl:flex-row gap-3">
+                <!-- Date Filter -->
+                <div class="flex gap-2">
+                    <input type="date" id="filterDateFrom"
+                        class="px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-eco dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:[color-scheme:dark]"
+                        placeholder="From Date" title="From Date">
+                    <span class="self-center text-gray-500">-</span>
+                    <input type="date" id="filterDateTo"
+                        class="px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-eco dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:[color-scheme:dark]"
+                        placeholder="To Date" title="To Date">
+                </div>
                 <!-- Category Filter (Master Admin Only) -->
                 <select id="filterCategory"
                     class="hidden w-full sm:w-auto px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-eco dark:bg-gray-700 dark:border-gray-600 dark:text-white">
@@ -114,7 +124,6 @@
                     <option value="Pending">Pending</option>
                     <option value="In-Progress">In Progress</option>
                     <option value="Resolved">Resolved</option>
-                    <option value="Deleted">Deleted</option>
                 </select>
 
 
