--- a/src/ChangePassword.html
+++ b/src/ChangePassword.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Set New Password</title>
-  <script type="module" crossorigin src="../assets/changePassword-DihIR0HN.js"></script>
+  <script type="module" crossorigin src="../assets/changePassword-B5AbjMsb.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-lfnErS8_.css">
+  <link rel="stylesheet" crossorigin href="../assets/style-DwLXEiw4.css">
 </head>
 
 <body
