Fix authentication: Add logout functionality and prevent back button access to login page

--- a/src/AcademicForm.html
+++ b/src/AcademicForm.html
@@ -311,7 +311,7 @@
 
 
   <!-- Validation Script -->
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./AcademicForm.js"></script>
 
 
