--- a/src/AdministrativeForm.html
+++ b/src/AdministrativeForm.html
@@ -237,7 +237,7 @@
 
   </footer>
 
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./AdministrativeForm.js"></script>
 
 
