--- a/src/FacilityForm.html
+++ b/src/FacilityForm.html
@@ -280,7 +280,7 @@
   </footer>
 
   <!-- Script for validation & dark mode -->
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./FacilityForm.js"></script>
 
 </body>
