--- a/src/Mycomplaint.html
+++ b/src/Mycomplaint.html
@@ -206,7 +206,7 @@
   </footer>
 
 
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./myComplaints.js"></script>
 
 </body>
