--- a/src/StudentBehaviorForm.html
+++ b/src/StudentBehaviorForm.html
@@ -255,7 +255,7 @@
 
   </footer>
 
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./StudentBehaviorForm.js"></script>
 </body>
 
