--- a/src/Newcomplaint.html
+++ b/src/Newcomplaint.html
@@ -245,7 +245,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
 
 </body>
 
