--- a/src/OtherForm.html
+++ b/src/OtherForm.html
@@ -234,7 +234,7 @@
 
   </footer>
 
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./OtherForm.js"></script>
 
 </body>
