--- a/src/TechnicalForm.html
+++ b/src/TechnicalForm.html
@@ -244,7 +244,7 @@
 
   </footer>
 
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./TechnicalForm.js"></script>
 </body>
 
