deploy: ef7b1bfb61b401b9100254a45861b6ae34ff9275

--- a/src/AdminProfile.html
+++ b/src/AdminProfile.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Profile — ComplaNet</title>
-  <script type="module" crossorigin src="../assets/adminProfile-BMnCc3n2.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/adminProfile-C6kMECgc.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DP-aSKaS.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-DIftV1Qz.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
 <body
