--- a/src/FacilityForm.html
+++ b/src/FacilityForm.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/facilityForm-a6g1DS0P.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/facilityForm-BOfFtEWz.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DP-aSKaS.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-DIftV1Qz.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
 <body
@@ -282,7 +283,6 @@
   </footer>
 
   <!-- Script for validation & dark mode -->
-  <script src="./darkMode.js"></script>
 
 </body>
 
