--- a/src/UserDashboard.html
+++ b/src/UserDashboard.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/userDashboard--0EtdtWI.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="modulepreload" crossorigin href="../assets/notifications-DfU9UfdW.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/userDashboard-DHDh9kWZ.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DP-aSKaS.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-DIftV1Qz.js">
+  <link rel="modulepreload" crossorigin href="../assets/notifications-BfifjTLQ.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
 <body
