--- a/src/AdminComplaintDetails.html
+++ b/src/AdminComplaintDetails.html
@@ -7,10 +7,10 @@
     <title>Complaint Details — ComplaNet Admin</title>
     <!-- Font Awesome -->
 
-  <script type="module" crossorigin src="../assets/adminComplaintDetails-Byyd9boj.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/adminComplaintDetails-AjdnQYju.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DP-aSKaS.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-DIftV1Qz.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
 <body
