--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Admin Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminDashboard-Bvu-EDqg.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-DMjetaZp.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/adminDashboard-voI9Yi_M.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DP-aSKaS.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-DIftV1Qz.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
 <body
