--- a/src/Newcomplaint.html
+++ b/src/Newcomplaint.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <link rel="stylesheet" crossorigin href="../assets/style-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/supabaseClient-DP-aSKaS.js"></script>
+  <script type="module" crossorigin src="../assets/darkMode-DIftV1Qz.js"></script>
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
 <body
@@ -245,7 +247,6 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="./darkMode.js"></script>
 
 </body>
 
