--- a/src/Notifications.html
+++ b/src/Notifications.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notifications — ComplaNet</title>
-  <script type="module" crossorigin src="../assets/supabaseClient-Du47UBJl.js"></script>
-  <script type="module" crossorigin src="../assets/darkMode-DMjetaZp.js"></script>
-  <script type="module" crossorigin src="../assets/notifications-DfU9UfdW.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/style-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/supabaseClient-DP-aSKaS.js"></script>
+  <script type="module" crossorigin src="../assets/darkMode-DIftV1Qz.js"></script>
+  <script type="module" crossorigin src="../assets/notifications-BfifjTLQ.js"></script>
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
 <body
