--- a/src/ResetPassword.html
+++ b/src/ResetPassword.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Reset Password</title>
-  <script type="module" crossorigin src="../assets/resetPassword-DWKdOLWk.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Du47UBJl.js">
-  <link rel="stylesheet" crossorigin href="../assets/style-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/resetPassword-DbUQrd19.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DP-aSKaS.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
 <body
