Improve color accessibility: Replace light blue with dark blue for better readability and add lighter colors for dark mode

--- a/src/AllComplaints.html
+++ b/src/AllComplaints.html
@@ -22,7 +22,9 @@
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
-            <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All Complaints</a>
+            <a href="AllComplaints.html"
+                class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">All
+                Complaints</a>
             <a href="Analytics.html" class="nav-content">Analytics</a>
 
             <!-- Profile Menu -->
@@ -55,7 +57,9 @@
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
-                <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All Complaints</a>
+                <a href="AllComplaints.html"
+                    class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">All
+                    Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
             </nav>
@@ -74,7 +78,8 @@
             <div>
                 <h1 class="text-3xl font-bold mb-1">Manage Complaints</h1>
                 <p class="text-gray-600 dark:text-gray-300">
-                    Total Complaints: <span id="totalComplaintsCount" class="font-bold text-eco-dark">0</span>
+                    Total Complaints: <span id="totalComplaintsCount"
+                        class="font-bold text-eco-dark dark:text-blue-400">0</span>
                 </p>
             </div>
         </div>
@@ -194,7 +199,7 @@
                 <!-- Actions Footer -->
                 <div class="flex items-center justify-center space-x-4 w-full mt-auto mb-1">
                     <button
-                        class="btn-status text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transform hover:scale-110 transition p-2"
+                        class="btn-status text-blue-700 hover:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300 transform hover:scale-110 transition p-2"
                         title="Edit Status">
                         <i class="fas fa-edit text-xl"></i>
                     </button>
@@ -286,7 +291,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)] 
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     ComplaNet Admin
                 </h2>
                 <p class="text-sm leading-6">
@@ -299,7 +304,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)]
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     Quick Navigation
                 </h2>
                 <ul class="space-y-2 text-sm">
@@ -319,7 +324,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)]
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     Admin Tools
                 </h2>
                 <ul class="space-y-2 text-sm">
@@ -360,7 +365,7 @@
                     <div class="sm:flex sm:items-start">
                         <div
                             class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-blue-100 dark:bg-blue-900 sm:mx-0 sm:h-10 sm:w-10">
-                            <i class="fas fa-edit text-blue-600 dark:text-blue-300"></i>
+                            <i class="fas fa-edit text-blue-700 dark:text-blue-400"></i>
                         </div>
                         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
                             <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-white" id="modal-title">
