--- a/src/AdminComplaintDetails.html
+++ b/src/AdminComplaintDetails.html
@@ -24,7 +24,8 @@
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html" class="nav-content hover:text-eco transition">Dashboard</a>
-            <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All
+            <a href="AllComplaints.html"
+                class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">All
                 Complaints</a>
             <a href="Analytics.html" class="nav-content hover:text-eco transition">Analytics</a>
 
@@ -58,7 +59,9 @@
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html" class="nav-content hover:text-eco">Dashboard</a>
-                <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All Complaints</a>
+                <a href="AllComplaints.html"
+                    class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">All
+                    Complaints</a>
                 <a href="Analytics.html" class="nav-content hover:text-eco">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content hover:text-eco">Admin Profile</a>
             </nav>
@@ -144,7 +147,7 @@
                     <div class="flex items-center space-x-4 mb-4">
                         <!-- Initials Avatar (Default) -->
                         <div id="avatarInitials"
-                            class="w-12 h-12 rounded-full bg-blue-100 flex items-center justify-center text-blue-600 font-bold text-xl">
+                            class="w-12 h-12 rounded-full bg-blue-200 flex items-center justify-center text-blue-800 font-bold text-xl">
                             U
                         </div>
                         <!-- Image Avatar (Hidden by default) -->
@@ -266,7 +269,7 @@
             <div class="mr-3 text-red-500"><i class="fas fa-file-pdf text-xl"></i></div>
             <div class="flex-1 overflow-hidden">
                 <p
-                    class="attachment-filename text-sm font-medium text-blue-600 dark:text-blue-400 truncate group-hover:underline">
+                    class="attachment-filename text-sm font-medium text-blue-700 dark:text-blue-400 truncate group-hover:underline">
                 </p>
                 <p class="attachment-desc text-xs text-gray-500 dark:text-gray-400"></p>
             </div>
